Fix overflow for textbox3

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body {
   color: white;
   margin: 20px;
   font-size: 20px;
+  word-wrap: break-word;
 }
 div > input {
   outline: none;
